Mon Jun 13 16:57:35 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_node.c server/gam_poll.c: applied 2 cleanup patches
	  from Neal H. Walfiel

Mon Jun 13 11:11:43 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_dnotify.h server/gam_inotify.c
	  server/gam_inotify.h server/gam_poll.c server/gam_server.c: applied
	  patch from  John McCutchan for the inotify back-end #171201 and more
	  debugging informations. Had to fix gam_poll_init_full() too.

Mon Jun 13 10:40:13 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: updated the Changelog

Fri Jun 10 17:15:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in doc/gamin.html doc/news.html: prepared release
	  0.1.1

Fri Jun 10 16:30:04 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_excludes.c: removed an extra variable
	* server/gam_poll.c: fixed problem raised by dnotify4.py, watching
	  a directory and getting a file should send back Deleted.

Fri Jun 10 11:44:27 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_excludes.c: allowed ~ at the beginning of a path to
	  indicate the user home directory

Thu Jun  9 00:01:26 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_hurd_mach_notify.c: fixed an open() turned in concat()
	  due to privoxy filtering closes #306915.
	* server/gam_server.c: applied cleanup from Neal H. Walfield removing
	  duplicate code #306913
	* server/gam_hurd_mach_notify.c: bugfix for the Hurd backend from
	  Neal H. Walfield #306916

Wed Jun  8 23:45:28 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c server/gam_channel.c: patch from
	  Neal H. Walfield support for OSes that do not support LOCAL_CRED
	  closes bug #306706
	* server/Makefile.am: tidying
	* libgamin/gam_api.c: fixed a missing const #306909 (Neal H. Walfield)

Wed Jun  8 19:20:08 CEST 2005 Daniel Veillard <veillard@redhat.com>
